# Auxiliary-Controller-Development

./: .gitignore  .gitmodules  README.md
Auxiliary_Controller/: Auxiliary_Controller.c  CMakeCache.txt  CMakeLists.txt  CopyOfCMakeCache.txt  Makefile  cmake_install.cmake
Auxiliary_Controller/headers/: gcs_messages.h
